[package]
name = "chernobyl"
version = "0.1.0"
edition = "2024"

[dependencies]
gumdrop = "0.8.1"
toml = "0.8.22"
serde = { version = "1.0.216", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.22"
eframe = { version = "0.34.3", features = ["persistence"] }
pnet = { version = "0.35.0", features = ["serde"] }
